--- a/index.html
+++ b/index.html
@@ -6,15 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link rel="stylesheet" href="src/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-      <div class="container">
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">Click me</a>
-    <script
-      src = "src/script.js"></script>
-    </script>
+    <div class="container">
+      <div class="weather-app
+        <h1>New York, NY USA</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Clouds"
+            />
+            12°C | F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a
+            href="https://github.com/cbrandt92/Vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >, by Christine Brandt
+        </small>
+      </div>
+      <script src="src/script.js"></script>
     </div>
   </body>
 </html>
