--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app
+      <div class="weather-app"
         <h1>New York, NY USA</h1>
         <ul>
           <li>Friday 05:00</li>
