--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+        <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="weather-app"
-        <h1>New York, NY USA</h1>
+      <div class="weather-app">
+
+    <h1>New York NY, USA</h1>
         <ul>
           <li>Friday 05:00</li>
           <li>Clear</li>
@@ -36,14 +38,16 @@
               <li>Wind: 2 km/h</li>
             </ul>
           </div>
-        </div>
-        <small>
+       <small>
           <a
             href="https://github.com/cbrandt92/Vanilla-weather-app"
             target="_blank"
             >Open-source code</a
           >, by Christine Brandt
         </small>
+        </div>
+
+       </div>   
       </div>
       <script src="src/script.js"></script>
     </div>
