java script added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -23,7 +24,7 @@
               <div class="col-9">
                 <input
                   type="search"
-                  placeholder="Type a city.."
+                  placeholder="Type a city..."
                   class="form-control"
                   id="city-input"
                   autocomplete="off"
@@ -52,14 +53,14 @@
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units"> °C </span>
+                  <div>Feels like: <span id="feels-like"></span> °C</div>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: <span class="precipitation"></span>%</li>
-                <li>Humidity: <span id="wind"></span> %</li>
-                <li>Wind: <span id="humidity"></span> km/h</li>
+                <li>Humidity: <span id="humidity"></span> %</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
