implemented unit converter

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
                 <img src="" alt="Clouds" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
-                  <span class="units"> °C </span>
+                  <span class="units"></span>
+                    <a
+                      href="#"
+                      id="celsius-link" class="active">
+                      °C
+                      </a>
+                      |
+                      <a
+                      href="#"
+                id="fahrenheit-link"
+                      >F</a
+                    ></span
+                  >
                   <div>Feels like: <span id="feels-like"></span> °C</div>
                 </div>
               </div>
