--- a/index.html
+++ b/index.html
@@ -49,23 +49,16 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img src="" alt="Clouds" id="icon" class="float-left" />
+                <img src="" alt="Clouds" id="icon"/>
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units"></span>
                     <a
-                      href="#"
-                      id="celsius-link" class="active">
-                      °C
-                      </a>
+                      href="#" id="celsius-link" class="active">
+                      °C</a>
                       |
-                      <a
-                      href="#"
-                id="fahrenheit-link"
-                      >F</a
-                    ></span
-                  >
-                  <div>Feels like: <span id="feels-like"></span> °C</div>
+                      <a href="#" id="fahrenheit-link">F</a></span>
+                  <div class="feels-like">Feels like: <span id="feels-like"></span> °C</div>
                 </div>
               </div>
             </div>
