--- a/index.html
+++ b/index.html
@@ -63,13 +63,27 @@
               </div>
             </div>
             <div class="col-6">
+            
               <ul>
                 <li>Humidity: <span id="humidity"></span> %</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
-          <div class="weather-forcast" id="forecast"></div>
+          <div class="weather-forcast" id="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                Thu</div>
+                <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="" width="42" />
+               <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max"> 18°</span> 
+                <span class="weather-forecast-temperature-min"> 12°</span>
+              </div>
+                
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
