--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       href="#" id="celsius-link" class="active">
                       °C</a>
                       |
-                      <a href="#" id="fahrenheit-link">F</a></span>
+                      <a href="#" id="fahrenheit-link">°F</a></span>
                   <div class="feels-like">Feels like: <span id="feels-like"></span> °C</div>
                 </div>
               </div>
